/jobs fix color contrast

--- a/src/style/_jobs.scss
+++ b/src/style/_jobs.scss
@@ -66,7 +66,7 @@
                 }
 
                 .job--location {
-                    color: #949494;
+                    color: #595959;
                 }
             }
         }
