--- a/src/style/general.css
+++ b/src/style/general.css
@@ -419,7 +419,7 @@ img {
   color: #0000ff;
 }
 .jobs--container .jobs--job--listing--container .job--listing--ul .job--listing--link .job--location {
-  color: #949494;
+  color: #595959;
 }
 
 @media screen and (min-width: 375px) {
